// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render correctly on a desktop 1`] = `
<PageHeader
  headerTools={<UNDEFINED />}
  logo={
    <Brand
      alt="OptaPlanner Logo"
      src="/assets/images/optaPlannerLogoDarkBackground200px.png"
    />
  }
  logoProps={
    Object {
      "href": "https://www.optaplanner.org",
      "rel": "noopener noreferrer",
      "target": "_blank",
    }
  }
  onNavToggle={[MockFunction]}
  showNavToggle={false}
  style={
    Object {
      "backgroundColor": "#0000",
    }
  }
  topNav={
    <UNDEFINED
      variant="horizontal"
    />
  }
/>
`;

exports[`Header component should render correctly on a mobile 1`] = `
<PageHeader
  headerTools={<UNDEFINED />}
  logo={
    <Brand
      alt="OptaPlanner Logo"
      src="/assets/images/optaPlannerLogoDarkBackground200px.png"
    />
  }
  logoProps={
    Object {
      "href": "https://www.optaplanner.org",
      "rel": "noopener noreferrer",
      "target": "_blank",
    }
  }
  onNavToggle={[MockFunction]}
  showNavToggle={true}
  style={
    Object {
      "backgroundColor": "#0000",
    }
  }
  topNav={false}
/>
`;
